--- a/styles.css
+++ b/styles.css
@@ -510,7 +510,8 @@ body {
     justify-content: center;
     gap: var(--spacing-2);
     overflow: hidden;
-    background: linear-gradient(135deg, #6366f1, #8b5cf6);
+    /* background: linear-gradient(135deg, #6366f1, #8b5cf6); */
+    background: var(--accent-color);
     box-shadow:
         inset 6px 6px 12px rgba(0, 0, 0, 0.1),
         inset -6px -6px 12px rgba(255, 255, 255, 0.1),
@@ -577,7 +578,8 @@ body {
 }
 
 .resources-btn:hover {
-    background: linear-gradient(135deg, #5855eb, #7c3aed);
+    /* background: linear-gradient(135deg, #5855eb, #7c3aed); */
+    background: var(--accent-color);
     box-shadow:
         inset 3px 3px 6px rgba(0, 0, 0, 0.15),
         inset -3px -3px 6px rgba(255, 255, 255, 0.15),
@@ -601,7 +603,8 @@ body {
 }
 
 .resources-btn:hover .resources-text span:hover {
-    color: #6366f1;
+    /* color: #6366f1; */
+    color: var(--accent-hover);
     transform: translateY(-7px);
 }
 
@@ -666,7 +669,8 @@ body {
 }
 
 [data-theme="light"] .resources-btn:hover .resources-text span:hover {
-    color: #3b82f6;
+    /* color: #3b82f6; */
+    color: var(--accent-color);
     transform: translateY(-7px);
 }
 
